# AI-Karaoke-Video-Generator

backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: api.py
backend/app/services/: alignment.py  video.py
backend/app/storage/: paths.py
backend/app/utils/: files.py
frontend/: package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: PreviewCanvas.tsx
frontend/src/lib/: api.ts
